<resources>
    <string name="app_name">ToDo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_pass">Enter your password</string>
    <string name="re_enter_your_pass">Re Enter Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_registered">Already Registered!!</string>
    <string name="not_registered">Not Registered Yet!!</string>
    <string name="sign_in">Sign In</string>
    <string name="type_your_task">Type Your Task</string>
</resources>