<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SignInFragment">
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:scaleType="fitXY"
        android:src="@drawable/design_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        >

    </TextView>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="60dp"
        android:layout_height="130dp"
        android:scaleType="fitXY"
        android:src="@drawable/ellipse_one"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:rotation="180"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="210dp"
        android:layout_marginStart="12dp"
        android:scaleType="fitXY"
        android:src="@drawable/design_two"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:cardCornerRadius="8dp"
        android:elevation="8dp"
        app:cardUseCompatPadding="true"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toTopOf="@id/imageView2">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailEt"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@color/white"
                    android:hint="@string/enter_your_email"
                    android:inputType="textEmailAddress"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:paddingTop="15dp" />
            </com.google.android.material.textfield.TextInputLayout>

        </com.google.android.material.textfield.TextInputLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardView1">



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passEt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:hint="@string/enter_your_pass"
                android:inputType="textPassword"
                android:paddingStart="12dp"
                android:paddingTop="15dp" />

        </com.google.android.material.textfield.TextInputLayout>


    </com.google.android.material.card.MaterialCardView>


    <ImageView
        android:id="@+id/next_Btn"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginEnd="12dp"
        android:src="@drawable/btn"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@id/cardView2"
        app:layout_constraintTop_toBottomOf="@+id/cardView2">

    </ImageView>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_registered"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        android:layout_marginStart="12dp"
        app:layout_constraintStart_toStartOf="@+id/cardView2"
        app:layout_constraintTop_toBottomOf="@+id/cardView2">

    </TextView>

    <TextView
        android:id="@+id/authTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textColor="@color/text_color"
        android:textSize="16sp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2">

    </TextView>
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/authTextView"
        android:visibility="gone"
        android:layout_marginTop="50dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>